odoo/service.yaml
# odoo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: odoo
  namespace: odoo
spec:
  selector:
    app: odoo
  ports:
  - name: http
    port: 8069
    targetPort: 8069
  - name: longpolling
    port: 8072
    targetPort: 8072
